--- a/app/src/main/res/layout/fragment_daily.xml
+++ b/app/src/main/res/layout/fragment_daily.xml
@@ -12,6 +12,10 @@
         android:layout_height="275dp"
         android:background="@drawable/daily_banner_bg">
 
+        <com.sougata.sudoku.ParticleView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
         <ImageView
             android:id="@+id/iv_banner_bottom_border"
             android:layout_width="match_parent"
@@ -110,7 +114,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -118,10 +122,10 @@
                 android:id="@+id/calendar_grid"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:layout_marginStart="8dp"
                 android:layout_marginTop="10dp"
                 android:numColumns="7"
-                android:paddingHorizontal="10dp" />
+                android:paddingHorizontal="5dp"
+                android:verticalSpacing="5dp" />
 
             <LinearLayout
                 android:id="@+id/ll_daily_play"
@@ -145,7 +149,6 @@
                     android:id="@+id/tv_daily_play_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="12 December, 2025"
                     android:textColor="#BFFFFFFF"
                     android:textSize="12sp" />
             </LinearLayout>
