--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -63,20 +63,21 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
             android:clipChildren="false"
             android:clipToPadding="false"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="10dp">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cv_daily"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
                 android:backgroundTint="@color/white"
                 android:visibility="visible"
                 app:cardCornerRadius="10dp"
-                android:layout_marginEnd="20dp"
                 app:cardElevation="5dp">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -84,17 +85,18 @@
                     android:orientation="vertical"
                     android:paddingHorizontal="15dp"
                     android:paddingVertical="10dp">
+
                     <ImageView
                         android:id="@+id/iv_home_daily_icon"
-                        android:src="@drawable/cup_13"
                         android:layout_width="50dp"
-                        android:layout_height="50dp" />
+                        android:layout_height="50dp"
+                        android:src="@drawable/cup_13" />
 
                     <TextView
                         android:layout_width="match_parent"
-                        android:text="Daily Challange"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
+                        android:text="Daily Challange"
                         android:textAlignment="center"
                         android:textColor="@color/black"
                         android:textSize="12sp" />
