--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,29 @@
     <color name="danger">#DC3545</color>
     <color name="boardText">#555555</color>
     <color name="gray">#888888</color>
+    <color name="home_icon_tint">#444444</color>
     <color name="settings_text">#444444</color>
     <color name="game_board_icon_tint">#A2A2A2</color>
     <color name="game_number_row_text">#3F589B</color>
     <color name="box_border_color">@color/gray</color>
+    <color name="fill_btn_text">@color/white</color>
+    <color name="statistic_card_bg">#FAFAFA</color>
+    <color name="statistic_banner_bg">#F6F7FC</color>
+    <color name="bottom_nav_bg">@color/white</color>
+    <color name="ms_unchecked_track">@color/material_dynamic_neutral90</color>
+    <color name="strategies_bg">#F0F0F0</color>
+    <color name="history_item_bg">@color/white</color>
+    <color name="awards_bg">#F6F7FB</color>
+    <color name="highlight_cell_bg">#E7EAF3</color>
+    <color name="highlight_number_bg">#C6CBE1</color>
+    <color name="cell_bg">@color/white</color>
+    <color name="selected_cell_bg">#C1D2FE</color>
+    <color name="cell_border">@color/gray</color>
+    <color name="tips_bg">#EEF5FD</color>
+    <color name="popup_bg">@color/white</color>
+    <color name="bottom_sheet_difficulty_bg">#F5F6F8</color>
+    <color name="number_btn_bg">@color/white</color>
+    <color name="rounded_icon_bg">#E3E8FB</color>
+    <color name="rounded_icon_bg_2">#DDF2ED</color>
+    <color name="rounded_icon_bg_3">#FEEFEC</color>
 </resources>
