--- a/app/src/main/res/drawable-night/game_board_bg.xml
+++ b/app/src/main/res/drawable-night/game_board_bg.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:width="1dp"
-        android:color="@color/cell_border" />
+    <solid android:color="@color/cell_bg" />
+    <corners android:radius="10dp" />
 </shape>
