--- a/app/src/main/res/drawable/event_button_bg.xml
+++ b/app/src/main/res/drawable/event_button_bg.xml
@@ -3,5 +3,5 @@
     <stroke android:width="1dp"
         android:color="#FFCE6161" />
     <corners android:radius="50dp" />
-    <solid android:color="@color/white"/>
+    <solid android:color="@color/fill_btn_text"/>
 </shape>
