--- a/app/src/main/res/drawable/rounded_icon_bg.xml
+++ b/app/src/main/res/drawable/rounded_icon_bg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#e3e8fb" />
+    <solid android:color="@color/rounded_icon_bg" />
     <corners android:radius="50dp" />
     <padding
         android:bottom="10dp"
