--- a/app/src/main/res/drawable/rounded_icon_bg_2.xml
+++ b/app/src/main/res/drawable/rounded_icon_bg_2.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#ddf2ed" />
+    <solid android:color="@color/rounded_icon_bg_2" />
     <corners android:radius="50dp" />
     <padding
         android:bottom="10dp"
