--- a/app/src/main/res/drawable/rounded_icon_bg_3.xml
+++ b/app/src/main/res/drawable/rounded_icon_bg_3.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#feefec" />
+    <solid android:color="@color/rounded_icon_bg_3" />
     <corners android:radius="50dp" />
     <padding
         android:bottom="7dp"
