--- a/app/src/main/res/layout/activity_play_guide.xml
+++ b/app/src/main/res/layout/activity_play_guide.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,7 +30,8 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:contentDescription="@string/back"
-            android:src="@drawable/ic_arrow_back" />
+            android:src="@drawable/ic_arrow_back"
+            app:tint="@color/black"/>
     </FrameLayout>
 
     <androidx.viewpager2.widget.ViewPager2
