--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -34,7 +34,8 @@
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:contentDescription="@string/back"
-                android:src="@drawable/ic_arrow_back" />
+                android:src="@drawable/ic_arrow_back"
+                app:tint="@color/black" />
         </FrameLayout>
 
         <ScrollView
@@ -87,7 +88,8 @@
                         <ImageView
                             android:layout_width="@dimen/settings_icon_size"
                             android:layout_height="@dimen/settings_icon_size"
-                            android:src="@drawable/ic_right_angle" />
+                            android:src="@drawable/ic_right_angle"
+                            app:tint="@color/black" />
                     </LinearLayout>
                 </LinearLayout>
 
@@ -136,7 +138,8 @@
                             android:layout_width="@dimen/settings_icon_size"
                             android:layout_height="@dimen/settings_icon_size"
                             android:contentDescription="@string/enter_into_the_option"
-                            android:src="@drawable/ic_right_angle" />
+                            android:src="@drawable/ic_right_angle"
+                            app:tint="@color/black" />
                     </LinearLayout>
                 </LinearLayout>
 
@@ -186,7 +189,8 @@
                             android:layout_width="@dimen/settings_icon_size"
                             android:layout_height="@dimen/settings_icon_size"
                             android:contentDescription="@string/enter_into_the_option"
-                            android:src="@drawable/ic_right_angle" />
+                            android:src="@drawable/ic_right_angle"
+                            app:tint="@color/black" />
                     </LinearLayout>
                 </LinearLayout>
 
@@ -236,7 +240,8 @@
                             android:layout_width="@dimen/settings_icon_size"
                             android:layout_height="@dimen/settings_icon_size"
                             android:contentDescription="@string/enter_into_the_option"
-                            android:src="@drawable/ic_right_angle" />
+                            android:src="@drawable/ic_right_angle"
+                            app:tint="@color/black" />
                     </LinearLayout>
                 </LinearLayout>
 
@@ -286,7 +291,58 @@
                             android:layout_width="@dimen/settings_icon_size"
                             android:layout_height="@dimen/settings_icon_size"
                             android:contentDescription="@string/enter_into_the_option"
-                            android:src="@drawable/ic_right_angle" />
+                            android:src="@drawable/ic_right_angle"
+                            app:tint="@color/black" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:background="@color/settings_text" />
+
+                <LinearLayout
+                    android:id="@+id/ll_settings_dark_mode"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingVertical="15dp">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="@dimen/settings_icon_size"
+                            android:layout_height="@dimen/settings_icon_size"
+                            android:contentDescription="@string/dark_mode"
+                            android:padding="3dp"
+                            android:src="@drawable/ic_moon"
+                            app:tint="@color/settings_text" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:text="@string/dark_mode"
+                            android:textColor="@color/settings_text"
+                            android:textSize="@dimen/settings_text_size"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="end">
+
+                        <com.google.android.material.materialswitch.MaterialSwitch
+                            android:id="@+id/ms_settings_dark_mode"
+                            android:layout_width="wrap_content"
+                            android:layout_height="30dp"
+                            android:checked="true" />
                     </LinearLayout>
                 </LinearLayout>
 
