--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -23,6 +23,7 @@
             android:layout_gravity="center"
             android:layout_margin="20dp"
             app:cardCornerRadius="35dp"
+            android:backgroundTint="@color/white"
             app:cardElevation="10dp" />
 
         <com.airbnb.lottie.LottieAnimationView
