--- a/app/src/main/res/layout/activity_strategies.xml
+++ b/app/src/main/res/layout/activity_strategies.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,14 +30,15 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:contentDescription="@string/back"
-            android:src="@drawable/ic_arrow_back" />
+            android:src="@drawable/ic_arrow_back"
+            app:tint="@color/black"/>
     </FrameLayout>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="15dp"
-        android:background="#F0F0F0">
+        android:background="@color/strategies_bg">
 
         <LinearLayout
             android:id="@+id/ll_strategies_container"
