--- a/app/src/main/res/layout/fragment_details_statistics.xml
+++ b/app/src/main/res/layout/fragment_details_statistics.xml
@@ -49,7 +49,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                app:cardBackgroundColor="#FAFAFA"
+                app:cardBackgroundColor="@color/statistic_card_bg"
                 app:cardCornerRadius="20dp"
                 app:cardElevation="0dp">
 
@@ -116,7 +116,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="1px"
-                        android:background="#80000080" />
+                        android:background="#80000000" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -203,7 +203,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                app:cardBackgroundColor="#FAFAFA"
+                app:cardBackgroundColor="@color/statistic_card_bg"
                 app:cardCornerRadius="20dp"
                 app:cardElevation="0dp">
 
@@ -298,7 +298,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                app:cardBackgroundColor="#FAFAFA"
+                app:cardBackgroundColor="@color/statistic_card_bg"
                 app:cardCornerRadius="20dp"
                 app:cardElevation="0dp">
 
