--- a/app/src/main/res/layout/fragment_event_award.xml
+++ b/app/src/main/res/layout/fragment_event_award.xml
@@ -24,7 +24,7 @@
             android:id="@+id/ll_no_event_medal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#F6F7FB"
+            android:background="@color/white"
             android:gravity="center"
             android:orientation="vertical">
 
