--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -26,7 +26,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:tint="#444444" />
+            app:tint="@color/home_icon_tint" />
 
         <ImageView
             android:id="@+id/iv_home_cup"
@@ -38,7 +38,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:tint="#444444" />
+            app:tint="@color/home_icon_tint" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -205,7 +205,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/continue_game"
-                android:textColor="@color/white"
+                android:textColor="@color/fill_btn_text"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
