--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -14,7 +14,6 @@
         android:orientation="vertical"
         android:padding="10dp">
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -85,7 +84,7 @@
                         android:padding="5dp"
                         android:src="@drawable/ic_note"
                         android:visibility="gone"
-                        app:tint="@color/white" />
+                        app:tint="@color/fill_btn_text" />
                 </LinearLayout>
 
                 <TextView
@@ -222,7 +221,7 @@
                             android:paddingHorizontal="7dp"
                             android:paddingVertical="2.5dp"
                             android:text="@string/day_placeholder"
-                            android:textColor="@color/white"
+                            android:textColor="@color/fill_btn_text"
                             android:textSize="11sp" />
                     </LinearLayout>
 
@@ -273,7 +272,7 @@
                             android:paddingHorizontal="7dp"
                             android:paddingVertical="2.5dp"
                             android:text="@string/off"
-                            android:textColor="@color/white"
+                            android:textColor="@color/fill_btn_text"
                             android:textSize="11sp" />
                     </LinearLayout>
                 </FrameLayout>
@@ -321,7 +320,7 @@
                             android:paddingHorizontal="7dp"
                             android:paddingVertical="2.5dp"
                             android:text="@string/day_placeholder"
-                            android:textColor="@color/white"
+                            android:textColor="@color/fill_btn_text"
                             android:textSize="11sp" />
                     </LinearLayout>
                 </FrameLayout>
