--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -6,7 +6,8 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="7dp"
     android:backgroundTint="@color/history_item_bg"
-    app:cardCornerRadius="10dp">
+    app:cardCornerRadius="10dp"
+    app:cardElevation="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
